[package]
name = "helloworldrs"
version = "0.1.0"
authors = ["gediminas <gediminas@messagebird.com>"]

[dependencies]

nom = "^3.2"
log = "0.3"
env_logger = "0.3"
ansi_term = "0.9"
futures = "0.1.21"
tokio-core = "0.1"
tokio-io = "0.1"
tokio = "0.1.5"
tokio-executor = "0.1.2"
tokio-reactor = "0.1.1"
tokio-timer = "0.2.1"
